# eutectic

./: .env.example  .gitignore  C++ Programming Exam Solutions - DeepSeek.html  CMakeLists.txt  CNAME  CPP_BACKEND_README.md  Design Polish - Replit.html  FIREBASE_SETUP.md  Forms.html  Hyperlinks.html  Lists.html  MONGODB_ATLAS_SETUP.md  PUBLIC_LAUNCH_CHECKLIST.md  README.md  RENDER_DEPLOYMENT.md  RENDER_VALUES.md  SMTP_SETUP.md  TODO.md  abious_rehabilitation_center2.html  abious_rehabilitation_ceter.html  admin.html  all_in_one.html  basic_structure.html  basic_table.html  build_cpp_backend.cmd  index.html  launch_public_site.cmd  lyrics.html  members.html  news.html  package-lock.json  package.json  page3.html  privacy-policy.html  programs_run.html  register.html  render.yaml  run_cpp_server.cmd  security-policy.html  server.js  (+3 more)
chrome-extension/: README.md  background.js  manifest.json  popup.html  popup.js
cylin-painters/: .env.example  .gitignore  TODO.md  package-lock.json  package.json  server.js
cylin-painters/config/: db.js  seed.js
cylin-painters/middleware/: auth.js
cylin-painters/models/: Contact.js  SiteContent.js  User.js
cylin-painters/public/: index.html
cylin-painters/public/admin/: dashboard.html  index.html
cylin-painters/public/admin/css/: admin.css
cylin-painters/public/admin/js/: dashboard.js  login.js
cylin-painters/public/css/: styles.css
cylin-painters/public/js/: content-loader.js  main.js  wallpaper.js
cylin-painters/routes/: auth.js  contact.js  content.js
include/: database.h  models.h  routes.h  utils.h
scripts/: validate-public-setup.ps1
src/: database.cpp  main.cpp  models.cpp  routes.cpp  server.cpp  utils.cpp
